Kubernetes/cassandra-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.16.0 (0c01309)
  creationTimestamp: null
  labels:
    io.kompose.service: cassandra
  name: cassandra
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: cassandra
    spec:
      containers:
      - image: cassandra
        name: bbCassandra
        resources: {}
      restartPolicy: Always
status: {}
