Kubernetes/spring-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring
spec:
  selector:
    matchLabels:
      app: spring
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: spring
    spec:
      containers:
      - image: bukibarak/bbdata-spring:latest
        name: spring
        ports:
        - containerPort: 8080
          name: spring
      restartPolicy: Always
